--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 <body>
     <div class="login-container">
         <div class="login-box">
-            <img src="logo1.png" alt="Quality Bill Service" class="logo">
+            <img src="logo1.jpg" alt="Quality Bill Service" class="logo">
             <h2>Iniciar Sesión</h2>
             <form action="login.handler.php" method="POST" id="loginForm">
                 <div class="input-group">
