--- a/factura.html
+++ b/factura.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="factura.css">
     <title>Generar Factura</title>
-    
 </head>
 <body>
     <div class="sidebar">
         <h2>Menú</h2>
         <a href="#">Facturación</a>
         <a href="#">Lista de Facturas</a>
-        <a href="#"><strong DEBITO - CREDITO></strong></a>
+        <a href="#"><strong>DEBITO - CREDITO</strong></a>
         <a href="#">Notas Débito</a>
         <a href="#">Notas Crédito</a>
         <a href="#">COMPRAS</a>
@@ -29,6 +28,7 @@
         <a href="#">MODULO ADMINISTRATIVO</a>
         <a href="#">PRESUPUESTO</a>
     </div>
+
     <div class="main-content">
         <div class="navbar">
             <h2>Quality Soft Service SAS</h2>
@@ -57,6 +57,7 @@
                 </div>
                 <button type="submit">Generar Factura</button>
             </form>
+
             <div class="table-container">
                 <table>
                     <thead>
